--- a/Styles/Pages/Invitation.css
+++ b/Styles/Pages/Invitation.css
@@ -263,6 +263,7 @@ table {
   color: #ffffffcc;
   border-radius: 50px;
   -webkit-text-stroke: 2px;
+  transition: all .3s ease;
   padding: 3px 6.8px 3px 9.2px;
 }
 #learnMore {
