--- a/Styles/Pages/Promote.css
+++ b/Styles/Pages/Promote.css
@@ -1,3 +1,6 @@
+img {
+  pointer-events: none;
+}
 #bigLogo {
   color: #1d1d1f;
   font-size: 66px;
@@ -17,6 +20,38 @@
   font-weight: 500;
   line-height: 31px;
   margin-bottom: 120px;
+}
+.bigPromoteContainer {
+  width: calc(100% - 160px);
+}
+.bigPromoteImg {
+  border-radius: 24px;
+}
+.bigPromoteInfoContainer {
+  width: 980px;
+  margin-top: 28px;
+}
+.promoteTag {
+  color: #f5f5f7;
+  font-size: 12px;
+  font-weight: 700;
+  padding: 2px 6px;
+  line-height: 16px;
+  border-radius: 16px;
+}
+.bigPromoteTitle {
+  color: #1d1d1f;
+  font-size: 34px;
+  margin-top: 12px;
+  font-weight: 500;
+  line-height: 44px;
+}
+.bigPromoteDate {
+  color: #6e6e73;
+  font-size: 14px;
+  font-weight: 500;
+  margin-top: 12px;
+  line-height: 19px;
 }
 #learnMore {
   padding: 52px 0;
@@ -57,6 +92,21 @@
     line-height: 26px;
     margin-bottom: 100px;
   }
+  .bigPromoteContainer {
+    min-width: 692px;
+    width: calc(100% - 128px);
+  }
+  .bigPromoteImg {
+    border-radius: 16px;
+  }
+  .bigPromoteInfoContainer {
+    width: 692px;
+    margin-top: 24px;
+  }
+  .bigPromoteTitle {
+    font-size: 28px;
+    line-height: 39px;
+  }
   #learnMore {
     padding: 48px 0;
   }
@@ -83,7 +133,30 @@
     line-height: 23px;
     margin-bottom: 80px;
   }
+  .bigPromoteContainer {
+    width: 100%;
+    max-width: 414px;
+  }
+  .bigPromoteInfoContainer {
+    margin-top: 18px;
+    width: 83.3333333333%;
+  }
+  .bigPromoteImg {
+    border-radius: 12px;
+  }
+  .bigPromoteTitle {
+    font-size: 22px;
+    line-height: 31px;
+  }
+  .bigPromoteDate {
+    margin-top: 8px;
+  }
   #learnMore {
     padding: 44px 0;
+  }
+}
+@media only screen and (max-width: 415px) {
+  .bigPromoteImg {
+    border-radius: 0;
   }
 }
