--- a/Styles/Pages/Promote.css
+++ b/Styles/Pages/Promote.css
@@ -24,7 +24,7 @@
 .bigPromoteImg {
   aspect-ratio: 16/9;
   border-radius: 24px;
-  background-size: cover;
+  background-size: cover !important;
   transition: transform .3s ease;
 }
 .bigPromoteInfoContainer {
