--- a/Styles/Pages/Promote.css
+++ b/Styles/Pages/Promote.css
@@ -56,7 +56,7 @@
 }
 .smallPromoteContainer {
   width: 1020px;
-  margin-top: 120px;
+  margin-top: 60px;
   transition: transform .3s ease;
 }
 .smallPromoteCol {
@@ -136,7 +136,16 @@
   }
   .smallPromoteContainer {
     width: 692px;
-    margin-top: 100px;
+    margin-top: 52px;
+  }
+  .smallPromoteCol {
+    margin-top: 48px;
+    padding: 0 18px;
+  }
+  .smallPromoteTitle {
+    font-size: 18px;
+    margin-top: 8px;
+    line-height: 26px;
   }
   .smallPromoteDate {
     margin-top: 8px;
@@ -188,7 +197,11 @@
   .smallPromoteContainer {
     width: 87.5%;
     max-width: 414px;
-    margin-top: 56px;
+    margin-top: 32px;
+  }
+  .smallPromoteCol {
+    margin-top: 24px;
+    padding: 0;
   }
   #learnMore {
     padding: 44px 0;
