--- a/Styles/Pages/Promote.css
+++ b/Styles/Pages/Promote.css
@@ -25,12 +25,12 @@
 .smallPromoteImg {
   aspect-ratio: 16/9;
   border-radius: 24px;
-  transition: transform .3s ease;
-  background-size: cover !important;
+  background-size: 100% !important;
+  transition: background-size .3s ease;
 }
 .promotePageLink:hover .smallPromoteImg,
 .promotePageLink:hover .bigPromoteImg {
-  transform: scale(1.03);
+  background-size: 103% !important;
 }
 .bigPromoteInfoContainer {
   width: 980px;
