--- a/Styles/Home.css
+++ b/Styles/Home.css
@@ -118,7 +118,7 @@ body {
 /* 首頁中間大廣告容器 */
 #homepageAdContainer {
   width: 980px;
-  padding: 80px 0;
+  padding: 80px 0 75px;
 }
 #homepageAdTitle {
   font-size: 48px;
@@ -158,8 +158,8 @@ body {
 .homePopularPostTextContainer {
   padding-left: 24px;
 }
-#homeReadHistoryPostBtn {
-	color: #1d1d1f;
+.readAllBtn {
+  color: #1d1d1f;
   font-size: 15px;
   margin-top: 40px;
   padding-top: 10px;
@@ -168,7 +168,7 @@ body {
   transition: all .3s ease;
   border: 2px solid #1d1d1f;
 }
-#homeReadHistoryPostBtn:hover {
+.readAllBtn:hover {
   color: #f5f5f7;
   background-color: #1d1d1f;
 }
@@ -232,7 +232,7 @@ body {
   /* 首頁中間大廣告容器 */
   #homepageAdContainer {
     width: 692px;
-    padding: 64px 0;
+    padding: 64px 0 59px;
   }
   #homepageAdTitle {
     font-size: 43px;
@@ -256,7 +256,7 @@ body {
     margin-top: 24px;
     padding-bottom: 24px;
   }
-  #homeReadHistoryPostBtn {
+  .readAllBtn {
     margin-top: 28px;
   }
 }
@@ -325,7 +325,7 @@ body {
   /* 首頁中間大廣告容器 */
   #homepageAdContainer {
     width: 87.5%;
-    padding: 40px 0;
+    padding: 40px 0 35px;
   }
   #homepageAdTitle {
     height: 28px;
@@ -351,7 +351,7 @@ body {
   .homePopularPostTextContainer {
 		padding-left: 16px;
   }
-  #homeReadHistoryPostBtn {
+  .readAllBtn {
     margin-top: 24px;
   }
 }
