--- a/Styles/Post.css
+++ b/Styles/Post.css
@@ -48,6 +48,9 @@ h3 {
 p {
   margin-bottom: 27px;
 }
+code {
+  color: var(--bs-body-color);
+}
 table {
   font-size: 17px;
   margin-bottom: 27px !important;
